--- a/_sass/cards.scss
+++ b/_sass/cards.scss
@@ -21,7 +21,8 @@
   img:hover {
     background-color: $darkest;
     transform: translate(0px, -8px);
-    box-shadow: 0px 8px 5px $shadows;
+    box-shadow: 5px 5px 5px $shadows;
+    transform: translate(-5px, -5px);
     -webkit-filter: brightness(70%);
   }
   a:hover + .stats {
@@ -36,7 +37,7 @@
     transition: 0.2s;
     opacity: 0;
     p {
-      font-size: 0.9em;
+      font-size: $font1;
       cursor: pointer;
     }
   }
