--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,15 +1,21 @@
 <div class="header-container">
-  <header class="header">
+  <header>
     <div class="site-header">
       <h1 class="title">The Intro</h1>
       <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
-        <div class="header-links">
-          <ul>
-            <li><a href="/index.html">Home </a></li>
-            <li>|</li>
-            <li><a href="/about.html"> About</a></li>
-          </ul>
-        </div>
+      <hr>
+      <div class="description">
+        <p> An introduction to introspectives</p>
       </div>
+    </div>
   </header>
 </div>
+
+
+<!-- <div class="header-links">
+  <ul>
+    <li><a href="/index.html">Home </a></li>
+    <li>|</li>
+    <li><a href="/about.html"> About</a></li>
+  </ul>
+</div> -->
