--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -2,5 +2,6 @@
 layout: default
 ---
 <div class="about_wrapper">
+  <h3>I've had the privilege of meeting incredible personalities from all walks of life; working within different professions with unique goals and personal values. However, one thing they do have in common, is the fact that they had inspired me to be a better version of myself; to push towards my own goals and to see my own values in a different perspective. These are the stories of those people.</h3>
   <p class="about_description">Danny enjoys music, doodling and apparently has a knack for getting people to open up. He enjoys long walks in general and hopes to one day own a cat.</p>
 </div>
