--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -2,11 +2,27 @@
   color: $darkest;
   text-align: center;
   font-size: $font6;
-  margin-bottom: 30px;
+  margin: 0 auto;
+
+}
+
+header {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
 .site-header {
   font-family: 'Oswald', sans-serif;
+  hr {
+    width: 30%;
+    color: $darkest;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .header-links {
@@ -32,6 +48,7 @@
 // this fixes title and lets it be overlapped
 .header-container {
   width: 100%;
+  height: 100vh;
   top: 0px;
 }
 
