--- a/_sass/profile.scss
+++ b/_sass/profile.scss
@@ -45,7 +45,7 @@
 
 .question {
   font-size: $font2;
-  padding: 0px 10px 10px 10px;
+  padding: 0px 10px 10px 20px;
 }
 
 
@@ -53,7 +53,7 @@
 
 .profile_extra1 {
   img {
-    max-height: 85vh;
+    max-height: 95vh;
     object-fit: contain;
     padding-bottom: 30px;
   }
@@ -117,17 +117,17 @@
   }
 
   .profile_wrapper {
-    width: 75%;
+    width: 90%;
     margin: 2em auto;
-    h2 {
-      padding: 0px 30px 30px 30px;
+    h1, h2 {
+      padding: 0px 18% 30px 18%;
     }
     p {
       line-height: $font3;
-      padding: 0px 30px 30px 30px;
+      padding: 0px 18% 30px 18%;
     }
     h3 {
-      padding: 0px 30px 10px 30px;
+      padding: 0px 18% 10px 18%;
     }
     h4 {
       font-size: $font1;
