--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,8 +1,14 @@
-$darkest: #293844;
-$dark: #404640;
+$darkest: #222;
+$dark: #222;
 $shadows: #9791a0;
 $highlights: #d8aeae;
-$basecolor: rgb(251, 219, 176);
+$basecolor: #fff;
+
+// $darkest: #293844;
+// $dark: #404640;
+// $shadows: #9791a0;
+// $highlights: #d8aeae;
+// $basecolor: rgb(251, 219, 176);
 //
 // #fff1dd
 
