add parallax picture to header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <div class="header-container">
   <header>
-    <div class="site-header">
+    <div class="site-header to-fade-up">
       <h1 class="title">The Intro</h1>
       <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
       <hr>
