--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -1,9 +1,19 @@
 .title {
-  color: $darkest;
+  color: white;
   text-align: center;
-  font-size: $font6;
+  font-size: $font5;
   margin: 0 auto;
+}
 
+.description {
+  text-align: center;
+  margin: 0 auto;
+  font-family: 'IBM Plex Serif', serif;
+  p {
+    font-size: $font3;
+    color: white;
+    font-style: italic;
+  }
 }
 
 header {
@@ -45,11 +55,17 @@ header {
   }
 }
 
-// this fixes title and lets it be overlapped
 .header-container {
   width: 100%;
-  height: 100vh;
+  height: 100%;
+  background-image: url(/assets/images/headers/andrenne_akanke.jpg);
   top: 0px;
+
+// parallax
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .header {
@@ -63,7 +79,7 @@ header {
   }
   .header-links {
     a, li {
-      font-size: $font2;
+      font-size: $font1;
     }
   }
 }
