header looks nice

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
-<div class="header-container">
+<div class="header-container to-fade-up">
   <header>
-    <div class="site-header to-fade-up">
+    <div class="site-header">
       <h1 class="title">The Intro</h1>
       <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
       <hr>
@@ -10,12 +10,3 @@
     </div>
   </header>
 </div>
-
-
-<!-- <div class="header-links">
-  <ul>
-    <li><a href="/index.html">Home </a></li>
-    <li>|</li>
-    <li><a href="/about.html"> About</a></li>
-  </ul>
-</div> -->
