--- a/_layouts/profile.html
+++ b/_layouts/profile.html
@@ -1,14 +1,14 @@
 ---
-layout: default
+layout: default_p
 ---
 
 <div class="profile_wrapper to-fade-up">
+  <div class="head_profile">
+    <img src={{ page.headImage }} alt="">
+  </div>
   <div class="profile_header">
     <h1>{{ page.firstName }} {{ page.lastName }}</h1>
     <h2>{{ page.occupation }}</h2>
-  </div>
-  <div class="head_profile">
-    <img src={{ page.headImage }} alt="">
   </div>
   <div class="playlists">
     <h4> Tracks curated by {{ page.firstName }}:
