--- a/css/styles.scss
+++ b/css/styles.scss
@@ -4,6 +4,7 @@
 @import "variables";
 @import "main";
 @import "header";
+@import "profile_header";
 @import "footer";
 @import "cards";
 @import "about";
