--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -16,7 +16,7 @@
   }
 }
 
-header {
+.site-header {
   margin: 0;
   position: absolute;
   top: 50%;
@@ -66,11 +66,10 @@ header {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+
 }
 
-.header {
-  margin: 0 auto;
-}
+
 
 // title font changes
 @media only screen and (min-width: $medium) {
