--- a/_sass/profile.scss
+++ b/_sass/profile.scss
@@ -1,5 +1,6 @@
 .profile_wrapper {
-  margin: 2em auto;
+  margin: 0px auto;
+  margin-top: 100px;
   p, h1, h3 {
     color: $darkest;
   }
@@ -15,7 +16,7 @@
 
 .head_profile {
   img {
-    max-height: 90vh;
+    max-height: 80vh;
     object-fit: contain;
   }
 }
@@ -53,7 +54,7 @@
 
 .profile_extra1 {
   img {
-    max-height: 95vh;
+    max-height: 85vh;
     object-fit: contain;
     padding-bottom: 30px;
   }
@@ -108,6 +109,7 @@
 @media only screen and (min-width: $medium) {
 
   .profile_header {
+    padding-top: 50px;
     h1 {
       font-size: $font4;
     }
@@ -118,9 +120,10 @@
 
   .profile_wrapper {
     width: 90%;
-    margin: 2em auto;
+    // h1 is name, h2 is the occupation
     h1, h2 {
-      padding: 0px 18% 30px 18%;
+      padding: 0px 18% 0px 18%;
+      margin: 0px;
     }
     p {
       line-height: $font3;
