header finished, no about for now

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
       <a href='https://www.linkedin.com/in/dannychachang/' target="_blank"><img src="/assets/images/icons/linkedinIcon.png" alt="" class="social-icon"></a>
       <a href='https://github.com/pacemade' target="_blank"><img src="/assets/images/icons/githubIcon.png" alt="" class="social-icon"></a>
       <a href='mailto:dannychachang@gmail.com' target="_blank"><img src="/assets/images/icons/emailIcon.png" alt="" class="social-icon"></a>
-      <a href='https://www.instagram.com/paisuu/' target="_blank"><img src="/assets/images/icons/igIcon.png" alt="" class="social-icon"></a>
+      <a href='https://www.instagram.com/readtheintro/' target="_blank"><img src="/assets/images/icons/igIcon.png" alt="" class="social-icon"></a>
     </div>
     <div class="copyright">
       <h5>&copy; 2018 Danny Chang</h5>
