--- a/_layouts/profile.html
+++ b/_layouts/profile.html
@@ -9,11 +9,10 @@ layout: default_p
   <div class="profile_header">
     <h1>{{ page.firstName }} {{ page.lastName }}</h1>
     <h2>{{ page.occupation }}</h2>
+
   </div>
-  <div class="playlists">
-    <h4> Tracks curated by {{ page.firstName }}:
-    <a href={{ page.playlistLink }} target="_blank">Youtube Playlist</a></h4>
-  </div>
+
+  <hr>
   {{ content }}
   <div class="disclaimer">
     <p><i>This interview was edited for clarity, names of individuals have been changed to respect their privacy</i><p>
@@ -36,3 +35,9 @@ layout: default_p
     </div>
   </div>
 </div>
+
+
+<!-- <div class="playlists">
+  <h4> <a href={{ page.playlistLink }} target="_blank">Tracks</a>
+    curated by {{ page.firstName }}</h4>
+</div> -->
