--- a/_sass/profile.scss
+++ b/_sass/profile.scss
@@ -12,6 +12,10 @@
     line-height: $font3;
     padding: 0px 10px 10px 10px;
   }
+  hr {
+    width: 30%;
+    margin: 50px auto;
+  }
 }
 
 .head_profile {
@@ -22,6 +26,7 @@
 }
 
 .profile_header {
+  padding-top: 10%;
   text-align: center;
   font-family: 'Oswald', sans-serif;
   h1 {
@@ -46,7 +51,7 @@
 
 .question {
   font-size: $font2;
-  padding: 0px 10px 10px 20px;
+  padding: 0px 10px 10px 10px;
 }
 
 
@@ -109,7 +114,6 @@
 @media only screen and (min-width: $medium) {
 
   .profile_header {
-    padding-top: 50px;
     h1 {
       font-size: $font4;
     }
@@ -126,7 +130,6 @@
       margin: 0px;
     }
     p {
-      line-height: $font3;
       padding: 0px 18% 30px 18%;
     }
     h3 {
@@ -134,6 +137,9 @@
     }
     h4 {
       font-size: $font1;
+    }
+    hr {
+      margin: 75px auto;
     }
   }
 
