--- a/_sass/profile_header.scss
+++ b/_sass/profile_header.scss
@@ -4,9 +4,9 @@
   background-color: white;
   border-bottom: 1px solid grey;
 
-  -moz-box-shadow:    0px 1px 5px $darkest;
-  -webkit-box-shadow: 0px 1px 5px $darkest;
-  box-shadow:         0px 1px 5px $darkest;
+  -moz-box-shadow:    0px 1px 5px grey;
+  -webkit-box-shadow: 0px 1px 5px grey;
+  box-shadow:         0px 1px 5px grey;
 
   padding: 0px;
   margin: 0px;
