--- a/_sass/profile.scss
+++ b/_sass/profile.scss
@@ -65,12 +65,23 @@
   }
 }
 
-.profile_double {
-  display: grid;
-  grid-gap: 1rem;
-  padding: 1rem;
-  padding-bottom: 30px;
-  grid-template-columns: auto auto;
+.profile-double-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  // overflow: hidden;
+  // height: 80vh;
+  img {
+    padding: 1em;
+    padding-bottom: 30px;
+    width: 41%;
+    // width: 37%;
+    // display: inline-block;
+    // display: grid;
+    // grid-gap: 1rem;
+    // grid-template-columns: auto auto;
+  }
 }
 
 .quote {
@@ -124,16 +135,20 @@
 
   .profile_wrapper {
     width: 90%;
+    .intro-word {
+      padding: 0px 10vw 0px 10vw;
+      opacity: 0.8;
+    }
     // h1 is name, h2 is the occupation
     h1, h2 {
-      padding: 0px 18% 0px 18%;
+      padding: 0px 12vw 0px 12vw;
       margin: 0px;
     }
     p {
-      padding: 0px 18% 30px 18%;
+      padding: 0px 12vw 30px 12vw;
     }
     h3 {
-      padding: 0px 18% 10px 18%;
+      padding: 0px 12vw 10px 12vw;
     }
     h4 {
       font-size: $font1;
