fixed padding to fit more picture

--- a/_sass/profile.scss
+++ b/_sass/profile.scss
@@ -73,7 +73,7 @@
   // overflow: hidden;
   // height: 80vh;
   img {
-    padding: 1em;
+    padding: 5px;
     padding-bottom: 30px;
     width: 41%;
     // width: 37%;
