--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="description to-fade-up">
-  <h3>I've had the privilege of meeting incredible personalities from all walks of life; working within different professions with unique goals and personal values. However, one thing they do have in common, is the fact that they had inspired me to be a better version of myself; to push towards my own goals and to see my own values in a different perspective. These are the stories of those people.</h3>
+  <h3>I've had the privilege of meeting incredible personalities from different walks of life, all with unique goals and personal values. However, one thing they do have in common, is the fact that they had inspired me to be a better version of myself. These are the stories of those individuals.</h3>
 </div>
 
 <div class="card-container">
