change margins to flush for double profile pics

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -8,7 +8,7 @@
 .description {
   text-align: center;
   margin: 0 auto;
-  padding: 50px 20%;
+  padding: 30px 20% 65px 20%;
   p {
     font-size: $font3;
     color: white;
