--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
       <h1 class="title">The Intro</h1>
       <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
       <hr>
-      <div class="description">
+      <div class="sub-title">
         <p> An introduction to introspectives</p>
       </div>
     </div>
