--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -41,6 +41,10 @@
   color: white;
   font-family: 'IBM Plex Serif', serif;
   font-style: italic;
+  p {
+    padding: 0;
+    margin: 28px 0 0 0;
+  }
 }
 
 .header-links {
