cleaning up code, added proper greys and crimson text, wrapper is 100% unless I need it for something, profile wrapper is its own thing now

--- a/_layouts/profile.html
+++ b/_layouts/profile.html
@@ -2,13 +2,13 @@
 layout: default_p
 ---
 
-<div class="profile_wrapper to-fade-up">
-  <div class="head_profile">
+<div class="profile-wrapper to-fade-up">
+  <div class="profile-pic">
     <img src={{ page.headImage }} alt="">
   </div>
-  <div class="profile_header">
-    <h1>{{ page.firstName }} {{ page.lastName }}</h1>
-    <h2>{{ page.occupation }}</h2>
+  <div class="profile-title">
+    <h1 class="profile-name">{{ page.firstName }} {{ page.lastName }}</h1>
+    <h2 class="profile-occupation">{{ page.occupation }}</h2>
   </div>
 
   <hr>
