--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -1,10 +1,10 @@
 .about_wrapper {
   margin: 3em auto;
   p, h1, h3 {
-    color: $darkest;
+    color: $darker;
   }
   h2 {
-    color: $dark;
+    color: $darker;
     padding: 0px 30px 30px 30px;
   }
   p {
