--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,23 +1,17 @@
-$darkest: #222;
-$dark: #222;
+
+$dark: #616161;
+$darker: #424242;
+$darkest: #212121;
 $shadows: #9791a0;
 $highlights: #d8aeae;
 $basecolor: #fff;
 
-// $darkest: #293844;
-// $dark: #404640;
-// $shadows: #9791a0;
-// $highlights: #d8aeae;
-// $basecolor: rgb(251, 219, 176);
-//
-// #fff1dd
-
-$font6: 7.594em;
-$font5: 5.063em;
-$font4: 3.375em;
-$font3: 2.25em;
-$font2: 1.5em;
 $font1: 1em;
+$font2: 1.5em;
+$font3: 2.25em;
+$font4: 3.375em;
+$font5: 5.063em;
+$font6: 7.594em;
 
 $small: 320px;
 $medium: 768px;
