--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,8 @@
   <!-- <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet"> -->
   <!-- <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet"> -->
   <!-- <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet"> -->
-  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif:400,400i" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif:400,400i" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,400i,600,600i,700,700i" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
   <link rel="stylesheet" href="{{ root_url }}/css/styles.css">
 </head>
