--- a/_layouts/default_p.html
+++ b/_layouts/default_p.html
@@ -5,7 +5,7 @@
 
   <body>
 
-    {%- include header_profile.html -%}
+    {%- include profile_header.html -%}
 
     <main>
       <div class="wrapper">
