--- a/_sass/profile_header.scss
+++ b/_sass/profile_header.scss
@@ -2,11 +2,11 @@
   width: 100%;
   height: 65px;
   background-color: white;
-  border-bottom: 1px solid grey;
+  border-bottom: 1px solid $dark;
 
-  -moz-box-shadow:    0px 1px 5px grey;
-  -webkit-box-shadow: 0px 1px 5px grey;
-  box-shadow:         0px 1px 5px grey;
+  -moz-box-shadow:    0px 1px 5px $dark;
+  -webkit-box-shadow: 0px 1px 5px $dark;
+  box-shadow:         0px 1px 5px $dark;
 
   padding: 0px;
   margin: 0px;
