responsive from mobile at small media query, also included fifth intervals

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,11 +4,8 @@
   <script type="text/javascript" src="{{site.baseurl}}/assets/js/main.js" ></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <title>The Intro</title>
-  <!-- <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet"> -->
-  <!-- <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet"> -->
-  <!-- <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet"> -->
-  <!-- <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif:400,400i" rel="stylesheet"> -->
-  <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,400i,600,600i,700,700i" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif:400,400i" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,400i,600,600i,700,700i" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
   <link rel="stylesheet" href="{{ root_url }}/css/styles.css">
 </head>
