--- a/_includes/profile_header.html
+++ b/_includes/profile_header.html
@@ -1,8 +1,8 @@
 <header>
   <div class="profile-header-container">
     <div class="profile-header">
-      <a href="/index.html"><h1>The Intro</h1></a>
-      <h2>{{ page.firstName }} {{ page.lastName }}</h2>
+      <a href="/index.html"><h1 class="profile-header-title">The Intro</h1></a>
+      <h2 class="profile-header-name">{{ page.firstName }} {{ page.lastName }}</h2>
     </div>
   </div>
 </header>
