--- a/_layouts/profile.html
+++ b/_layouts/profile.html
@@ -9,9 +9,8 @@ layout: default_p
   <div class="profile-title">
     <h1 class="profile-name">{{ page.firstName }} {{ page.lastName }}</h1>
     <h2 class="profile-occupation">{{ page.occupation }}</h2>
+    <hr class="profile-break-line">
   </div>
-
-  <hr>
   {{ content }}
   <div class="disclaimer">
     <p><i>This interview was edited for clarity, names of individuals have been changed to respect their privacy</i><p>
