--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -13,6 +13,16 @@ $font4: 3.375em;
 $font5: 5.063em;
 $font6: 7.594em;
 
+$fifth1: 12.5px;
+$fifth2: 25px;
+$fifth3: 37.5px;
+$fifth4: 50px;
+$fifth5: 62.5px;
+$fifth6: 75px;
+$fifth7: 87.5px;
+$fifht8: 100px;
+
+
 $small: 320px;
 $medium: 768px;
 $large: 960px;
