--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -7,8 +7,8 @@ html, body {
   // font-family: 'Nunito', sans-serif;
   // font-family: 'Roboto Slab', serif;
   // font-family: 'Rubik', sans-serif;
-  // font-family: 'IBM Plex Serif', serif;
-  font-family: 'Crimson Text', serif;
+  font-family: 'IBM Plex Serif', serif;
+  // font-family: 'Crimson Text', serif;
 }
 
 body {
@@ -40,6 +40,12 @@ a:hover {
 
 // margin change to accomadate font size change
 @media only screen and (min-width: $medium) {
+  html, body {
+    font-size: 18px;
+  }
+}
+
+@media only screen and (min-width: $large) {
   html, body {
     font-size: 18px;
   }
