cleaned up a lot of styling, large done for viewpoint for profiles

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,11 +2,8 @@
   <header>
     <div class="site-header">
       <h1 class="title">The Intro</h1>
-      <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
-      <hr>
-      <div class="sub-title">
-        <p> An introduction to introspectives</p>
-      </div>
+      <hr class="line-break-header">
+      <h2 class="sub-title"> An introduction to introspectives</h2>
     </div>
   </header>
 </div>
