--- a/_layouts/profile.html
+++ b/_layouts/profile.html
@@ -9,7 +9,7 @@ layout: default_p
   <div class="profile-title">
     <h1 class="profile-name">{{ page.firstName }} {{ page.lastName }}</h1>
     <h2 class="profile-occupation">{{ page.occupation }}</h2>
-    <hr class="profile-break-line">
+    <hr class="profile-line-break">
   </div>
   {{ content }}
   <div class="disclaimer">
