--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <title>The Intro</title>
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif:300,400,400i,700" rel="stylesheet">
-  <!-- <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,400i,600,600i,700,700i" rel="stylesheet"> -->
-  <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
   <link rel="stylesheet" href="{{ root_url }}/css/styles.css">
 </head>
