responsive for header on main page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <header>
     <div class="site-header">
       <h1 class="title">The Intro</h1>
-      <hr class="line-break-header">
+      <hr class="header-line-break">
       <h2 class="sub-title"> An introduction to introspectives</h2>
     </div>
   </header>
