--- a/_sass/cards.scss
+++ b/_sass/cards.scss
@@ -4,18 +4,18 @@
   grid-gap: 2rem;
   padding: 1rem;
 }
+
 .card {
   text-align: center;
   position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: 'Oswald', sans-serif;
   img {
-    height: 60vh;
+    height: 50vh;
     object-fit: cover;
     transition: 0.5s;
-    border-radius: 3px;
+    border-radius: 2px;
     box-shadow: none;
   }
   img:hover {
@@ -31,14 +31,61 @@
     transform: scale(1.1)
   }
   .stats {
+    font-family: 'Oswald', sans-serif;
     color: white;
     position: absolute;
-    pointer-events:none;
-    transition: 0.5s;
-    opacity: 0;
-    p {
+    h1, h2, h3 {
+      text-shadow: 1.5px 1.5px 5px $darkest;
+      margin: 0;
+      padding: 0;
+    }
+    .stats-name {
+      font-size: $font4;
+      padding: 0px 30px;
+    }
+    .stats-occupation {
       font-size: $font1;
-      cursor: pointer;
+      font-family: 'IBM Plex Serif', serif;
+      font-style: italic;
+      font-weight: lighter;
+      margin-top: $fifth1;
+      margin-bottom: $fifth2;
+      padding: 0px 30px;
+    }
+    .stats-favorite {
+      font-family: 'IBM Plex Serif', serif;
+      font-size: $font1;
+      font-weight: lighter;
+      padding: 0px 30px;
     }
   }
+}
+
+
+@media only screen and (min-width: $large) {
+
+  .card {
+    img {
+      height: 75vh;
+    }
+    .stats {
+      opacity: 0;
+      position: absolute;
+      pointer-events:none;
+      transition: 0.5s;
+      h1, h2, h3 {
+        cursor: pointer;
+      }
+      .stats-name {
+        font-size: $font3;
+      }
+      .stats-occupation {
+        font-size: $font0;
+      }
+      .stats-favorite {
+        font-size: $font0;
+      }
+    }
+  }
+  
 }
