--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -16,14 +16,6 @@ body {
 }
 
 // wrapper is essentially body, on top of header fo cool scrolling action
-.wrapper {
-  width: 100%;
-  margin: 3em auto;
-  background-color: $basecolor;
-  // margin-top: 230px;
-  // padding-top: 10px;
-  position: relative;
-}
 
 img {
   width: 100%;
@@ -38,10 +30,34 @@ a:hover {
   color: $highlights;
 }
 
+// actually the main
+
+
+
+.description-container {
+  text-align: center;
+  margin: 0 auto;
+  padding: 65px 15% 65px 15%;
+  .description {
+    font-style: normal;
+    font-weight: normal;
+    color: $darker;
+    padding: 50px 0px;
+  }
+  .description-line-break {
+    width: 37.5%;
+    align: center;
+  }
+}
+
 // margin change to accomadate font size change
 @media only screen and (min-width: $medium) {
   html, body {
     font-size: 18px;
+  }
+  .main-container {
+    width: 90%;
+    margin: 0 auto;
   }
 }
 
