added lightbox functionality oh man oh geez, had to change entire page to html from markdown, wasnt using it anyway

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,4 +7,5 @@
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif:300,300i,400" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
   <link rel="stylesheet" href="{{ root_url }}/css/styles.css">
+  <link href="../lightbox/css/lightbox.min.css" rel="stylesheet">
 </head>
