--- a/_layouts/default_p.html
+++ b/_layouts/default_p.html
@@ -15,6 +15,8 @@
 
     {%- include footer.html -%}
 
+    <script src="../lightbox/js/lightbox.min.js"></script>
+
   </body>
 
   {%- include prevnext.html -%}
