--- a/_layouts/profile.html
+++ b/_layouts/profile.html
@@ -3,7 +3,7 @@ layout: default_p
 ---
 
 <div class="profile-wrapper to-fade-up">
-  <div class="profile-pic">
+  <div class="profile_imgs">
     <a href="{{ page.headImage }}" data-lightbox="{page.firstName}">
       <img src="{{ page.headImage }}" alt="oh man oh geez">
     </a>
