--- a/_sass/profile.scss
+++ b/_sass/profile.scss
@@ -2,12 +2,6 @@
   width: 95%;
   margin: 0px auto;
   margin-top: 100px;
-  .profile-pic {
-    img {
-      max-height: 80vh;
-      object-fit: contain;
-    }
-  }
   p {
     line-height: 1.65em;
     padding-bottom: $fifth2;
@@ -70,15 +64,17 @@
 
 // profile image & quote containers -------
 
-.profile_extra1 {
-  padding-bottom: 30px;
-  padding-top: 30px;
+
+.profile_imgs {
+  text-align: center;
   a {
     display: inline-block;
-    img {
-      max-height: 85vh;
-      object-fit: contain;
-    }
+  }
+  img {
+    width:auto;
+    height:auto;
+    max-width:100%;
+    max-height:85vh;
   }
 }
 
@@ -87,13 +83,8 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  // overflow: hidden;
-  // height: 80vh;
-  a {
-    padding: 1%;
-    padding-bottom: 30px;
-    padding-top: 30px;
-    width: 48%;
+  .profile_imgs {
+    padding: $fifth1;
   }
 }
 
