added view button on mobile/tablets

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,6 +18,7 @@ layout: default
           <h1 class="stats-name">{{ profile.firstName }} {{ profile.lastName }}</h1>
           <h2 class="stats-occupation">{{ profile.occupation }}</h2>
           <h3 class="stats-favorite">Favorite {{ profile.factCategory }}: {{ profile.factFact }} </h3>
+          <h4 class="profile-view-button">VIEW</h4>
         </div>
       </div>
     {% endfor %}
