not worth to do actual parallax for mobile.... yet

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,7 @@
-<div class="header-container to-fade-up">
-  <header>
-    <div class="site-header">
-      <h1 class="title">The Intro</h1>
-      <hr class="header-line-break">
-      <h2 class="sub-title"> An introduction to introspectives</h2>
-    </div>
-  </header>
-</div>
+<header class="header-container to-fade-up">
+  <div class="site-header">
+    <h1 class="title">The Intro</h1>
+    <hr class="header-line-break">
+    <h2 class="sub-title"> An introduction to introspectives</h2>
+  </div>
+</header>
