separating mobile and desktop headers

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,6 @@
 <header class="header-container to-fade-up">
   <div class="site-header">
+    <img class="mobile-header" src="/assets/images/headers/andrenne_akanke.jpg" alt="">
     <h1 class="title">The Intro</h1>
     <hr class="header-line-break">
     <h2 class="sub-title"> An introduction to introspectives</h2>
