think it worked, separating mobile and desktop headers

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,10 @@
-<header class="header-container to-fade-up">
+<header class="header-container">
   <div class="site-header">
     <img class="mobile-header" src="/assets/images/headers/andrenne_akanke.jpg" alt="">
-    <h1 class="title">The Intro</h1>
-    <hr class="header-line-break">
-    <h2 class="sub-title"> An introduction to introspectives</h2>
+    <div class="header-text">
+      <h1 class="title to-fade-up">The Intro</h1>
+      <hr class="header-line-break to-fade-up">
+      <h2 class="sub-title to-fade-up"> An introduction to introspectives</h2>
+    </div>
   </div>
 </header>
