--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -3,32 +3,34 @@
     height: 100vh;
     object-fit: cover;
   }
-  // font-family: 'Oswald', sans-serif;
-  // margin: 0;
-  // position: absolute;
-  // top: 50%;
-  // left: 50%;
-  // -ms-transform: translate(-50%, -50%);
-  // transform: translate(-50%, -50%);
-  // .title, .sub-title {
-  //   text-align: center;
-  //   text-shadow: 1.5px 1.5px 5px $darkest;
-  // }
-  // .title {
-  //   color: white;
-  //   font-size: $font5;
-  //   margin: 0 auto;
-  // }
-  // .sub-title {
-  //   color: white;
-  //   font-family: 'IBM Plex Serif', serif;
-  //   font-style: italic;
-  //   font-size: $font2;
-  // }
-  // .header-line-break {
-  //   width: 37.5%;
-  //   box-shadow: 1.5px 1.5px 5px $darkest;
-  // }
+  .header-text {
+    font-family: 'Oswald', sans-serif;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
+  .title, .sub-title {
+    text-align: center;
+    text-shadow: 1.5px 1.5px 5px $darkest;
+  }
+  .title {
+    color: white;
+    font-size: $font5;
+    margin: 0 auto;
+  }
+  .sub-title {
+    color: white;
+    font-family: 'IBM Plex Serif', serif;
+    font-style: italic;
+    font-size: $font2;
+  }
+  .header-line-break {
+    width: 37.5%;
+    box-shadow: 1.5px 1.5px 5px $darkest;
+  }
 }
 
 // title font changes
