--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,9 @@
 
     {%- include footer.html -%}
 
+    <script type="text/javascript" src="{{site.baseurl}}/assets/js/main.js" ></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
   </body>
 
   {%- include prevnext.html -%}
