--- a/_layouts/default_p.html
+++ b/_layouts/default_p.html
@@ -15,6 +15,8 @@
 
     {%- include footer.html -%}
 
+    <script type="text/javascript" src="{{site.baseurl}}/assets/js/main.js" ></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="../lightbox/js/lightbox.min.js"></script>
 
   </body>
