--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -15,14 +15,14 @@
   .title, .sub-title {
     text-align: center;
     text-shadow: 1.5px 1.5px 5px $darkest;
+    color: white;
   }
   .title {
-    color: white;
     font-size: $font5;
-    margin: 0 auto;
+    margin-bottom: 0;
+    margin-top: 0;
   }
   .sub-title {
-    color: white;
     font-family: 'IBM Plex Serif', serif;
     font-style: italic;
     font-size: $font2;
