mobi ready dissed me a bit, fixed some more issues to pass

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="header-container">
   <div class="site-header">
-    <img class="mobile-header" src="/assets/images/headers/andrenne_akanke.jpg" alt="">
+    <img class="mobile-header" src="/assets/images/headers/andrenne_akanke.jpg" alt="header profile picture">
     <div class="header-text">
       <h1 class="title to-fade-up">The Intro</h1>
       <hr class="header-line-break to-fade-up">
